--- a/LCTMoodle/Content/styles/HoiDap/XemCauHoi.css
+++ b/LCTMoodle/Content/styles/HoiDap/XemCauHoi.css
@@ -3,11 +3,12 @@
 .item-hoi-dap {    
     display: flex;
     flex-direction: row;
+    position: relative;
 }
 
     /*#region Thông tin người đăng */
 
-    .item-hoi-dap > .thong-tin {
+    .item-hoi-dap .thong-tin {
         display: flex;
         flex-direction: column;   
         min-width: 80px;
@@ -16,34 +17,34 @@
         border-right: 1px solid #f5f5f5;
         background-color: #f8f8f8;
     }
-        .item-hoi-dap > .thong-tin > .nguoi-dung {            
+        .item-hoi-dap .thong-tin .nguoi-dung {            
             display: flex;
             flex-direction: column;     
             margin-bottom: 10px;       
         }
-            .item-hoi-dap > .thong-tin > .nguoi-dung > .hinh-dai-dien {                
+            .item-hoi-dap .thong-tin .nguoi-dung .hinh-dai-dien {                
                 width: 80px;
                 height: 80px;
                 background-color: #ff6a00; 
             }
-                .item-hoi-dap > .thong-tin > .nguoi-dung > .hinh-dai-dien > img {                
+                .item-hoi-dap .thong-tin .nguoi-dung .hinh-dai-dien img {                
                     width: 100%;
                 }
-            .item-hoi-dap > .thong-tin > .nguoi-dung > span {
+            .item-hoi-dap .thong-tin .nguoi-dung span {
                 width: 100%;
                 text-align: center;
             }
-        .item-hoi-dap > .thong-tin > .diem-so {
+        .item-hoi-dap .thong-tin .diem-so {
             display: flex;
             flex-direction: column;
             padding: 0;
         }
-            .item-hoi-dap > .thong-tin > .diem-so > .so {
+            .item-hoi-dap .thong-tin .diem-so .so {
                 text-align: center;
                 font-size: 25px;
                 font-weight: bold;
             }
-            .item-hoi-dap > .thong-tin > .diem-so > i {
+            .item-hoi-dap .thong-tin .diem-so i {
                 text-align: center;
                 font-size: 50px;
                 cursor: pointer;
@@ -51,7 +52,7 @@
                 height: 20px;
                 line-height: 20px;
             }
-        .item-hoi-dap > .thong-tin > .thoi-gian {
+        .item-hoi-dap .thong-tin .thoi-gian {
             margin-top: 10px;
             font-size: 11px;
             text-align: center;
@@ -62,17 +63,17 @@
     
     /*#region Nội dung câu hỏi */
     
-    .item-hoi-dap > .chi-tiet {
+    .item-hoi-dap .chi-tiet {
         width: 100%;  
         padding: 10px;
     }
-        .item-hoi-dap > .chi-tiet > .noi-dung {
+        .item-hoi-dap .chi-tiet .noi-dung {
 
         }
-            .item-hoi-dap > .chi-tiet > .tieu-de {            
+            .item-hoi-dap .chi-tiet .tieu-de {            
                 font-size: 18px;
             }
-            .item-hoi-dap > .chi-tiet > .noi-dung {
+            .item-hoi-dap .chi-tiet .noi-dung {
                 padding-top: 5px;
             }            
 
@@ -82,7 +83,15 @@
 
 /*#region Câu hỏi */
 
+.cau-hoi {
 
+}
+    .cau-hoi .chi-tiet .tieu-de {
+        font-weight: bold;
+    }
+    .cau-hoi .chi-tiet .noi-dung {
+        padding-top: 10px;
+    }
 
 /*#endregion */
 
