--- a/LCTMoodle/Views/HoiDap/_Item_TraLoi.cshtml
+++ b/LCTMoodle/Views/HoiDap/_Item_TraLoi.cshtml
@@ -31,6 +31,19 @@
     <article class="hop hop-1-vien">
         <section class="noi-dung tra-loi">
             <article class="item-hoi-dap binh-thuong">
+                <section class="khung-chuc-nang-lct">
+                    <ul data-doi-tuong="traloi-@Model.ma">
+                        <li>
+                            <a data-chuc-nang="sua-bai-viet">Sửa bài viết</a>
+                        </li>
+                        <li>
+                            <a data-chuc-nang="xoa-bai-viet">Xóa bài viết</a>
+                        </li>
+                    </ul>
+                    <button data-chuc-nang="tat-mo" data-mo-doi-tuong="traloi-@Model.ma">
+                        <i class="pe-7f-config"></i>
+                    </button>
+                </section>
                 <section class="thong-tin">
                     <div class="nguoi-dung">
                         <div class="hinh-dai-dien">
