--- a/LCTMoodle/Views/Quyen/QuanLy.cshtml
+++ b/LCTMoodle/Views/Quyen/QuanLy.cshtml
@@ -41,24 +41,19 @@
                         </ul>
                     </section>
                 </section>
-                <section class="khung-nguoi">
+                <section id="khung_nguoi" class="khung-nguoi tat">
                     <section class="khung-tim lct-form">
                         <article class="input">
                             <input id="tim_nguoi_input" type="text" placeholder="Tìm người dùng" />
                         </article>
                     </section>
                     <section class="khung-danh-sach">
-                        <ul id="danh_sach_nguoi" class="danh-sach">
-                            <li class="item">
-                                <img src="/boy.png/" alt="Alternate Text" />
-                                <a href="#">Lê Bình Chiêu</a>
-                            </li>
-                        </ul>
+                        <ul id="danh_sach_nguoi" class="danh-sach"></ul>
                         <section>Không có người dùng</section>
                     </section>
                 </section>
             </section>
-            <section class="khung-duoi">
+            <section id="khung_quyen" class="khung-duoi tat">
                 <section class="khung-pham-vi">
                     <ul class="danh-sach">
                         <li class="item chon">
