--- a/LCTMoodle/Views/KhoaHoc/Xem.cshtml
+++ b/LCTMoodle/Views/KhoaHoc/Xem.cshtml
@@ -11,10 +11,7 @@
 
     ViewData["ChucNang"] = new List<string>()
     {
-        "Bài giảng", "href=?hienthi=baigiang",
-        "Bài tập", "href='?hienthi=baitap'",
-        "Diễn đàn", "href='?hienthi=diendan'",
-        "Đăng ký vào khóa học", "href=javascript:void(0) data-chuc-nang=xoa-khoa-hoc data-value=" + Model.ma
+        "Quản lý quyền", "href=\"/QuanlyQuyen/KH/" + Model.ma + "\""
     };
 }
 
