--- a/LCTMoodle/Views/Quyen/_Form_Nhom.cshtml
+++ b/LCTMoodle/Views/Quyen/_Form_Nhom.cshtml
@@ -3,7 +3,8 @@
         Thêm nhóm người dùng
     </section>
     <form id="them_nhom_form" class="noi-dung lct-form">
-        <input type="hidden" name="PhamVi" value="HT" />
+        <input type="hidden" name="PhamVi" value="@ViewData["PhamVi"]" />
+        <input type="hidden" name="DoiTuong" value="@ViewData["DoiTuong"]" />
         <ul>
             <li>
                 <section class="tieu-de">
