--- a/LCTMoodle/Content/styles/Quyen/QuanLy.css
+++ b/LCTMoodle/Content/styles/Quyen/QuanLy.css
@@ -242,6 +242,13 @@
             border-bottom: 1px solid #eee;
         }
 
+        .khung-chua .khung-duoi .khung-quyen .mo-ta-duoi {
+            padding: 5px;
+            border-top: 1px solid #eee;
+            margin-top: -1px;
+            text-align: center;
+        }
+
         .khung-chua .khung-duoi .khung-quyen .danh-sach {
             display: flex;
             flex-wrap: wrap;
@@ -254,6 +261,7 @@
             width: 50%;
             transition: background-color 0.5s;
             background-color: #fcfcfc;
+            flex-wrap: nowrap;
         }
 
             .khung-chua .khung-duoi .khung-quyen .item:hover {
@@ -264,10 +272,46 @@
                 border-right: 1px solid #eee;
                 width: calc(50% - 1px);
             }
-        
-            .khung-chua .khung-duoi .khung-quyen .item:nth-last-child(1),
-            .khung-chua .khung-duoi .khung-quyen .item:nth-last-child(2):nth-child(odd) {
-                border-bottom: 0;
+
+            .khung-chua .khung-duoi .khung-quyen .item > u {
+                display: block;
+                min-height: 100%;
+                min-width: 3px;
+                max-width: 3px;
+                margin-left: 3px;
+                background-color: #eee;
+                transition: 0.5s;
             }
+
+                .khung-chua .khung-duoi .khung-quyen .item.hover > u {
+                    background-color: #08c;
+                }
+
+            .khung-chua .khung-duoi .khung-quyen .item > a {
+                display: flex;
+                align-items: center;
+                min-height: 100%;
+                min-width: 30px;
+                max-width: 30px;
+                margin-left: 5px;
+            }
+
+                .khung-chua .khung-duoi .khung-quyen .item > a i {
+                    display: block;
+                    width: 16px;
+                    height: 16px;
+                    margin: 0 auto;
+                    background: url('/Quyen.png/Quyen') -24px 0px;
+                    opacity: 0.2;
+                    transition: opacity 0.5s;
+                }
+
+                .khung-chua .khung-duoi .khung-quyen .item.mo > a i {
+                    background-position: -24px -16px;
+                }
+
+                    .khung-chua .khung-duoi .khung-quyen .item > a:hover i {
+                        opacity: 0.4;
+                    }
 
 /*#endregion */
