--- a/LCTMoodle/Views/BaiVietDienDan/_Khung.cshtml
+++ b/LCTMoodle/Views/BaiVietDienDan/_Khung.cshtml
@@ -1,11 +1,24 @@
 ﻿@model List<DTOLayer.BaiVietDienDanDTO>
+@using Helpers
 
-<section class="hop hop-2-vien">
-    <section class="tieu-de">
-        Đăng bài viết
-    </section>
-    @Html.Partial("~/Views/BaiVietBaiTap/_Form.cshtml", null, new ViewDataDictionary() { { "MaKhoaHoc", ViewData["MaKhoaHoc"].ToString() } })
-</section>
+@{
+    var quyen = (string[])ViewData["Quyen"];
+    
+    bool coQuyenThem = QuyenHelper.co(quyen, "DienDan_Them");
+}
+
+@if (coQuyenThem)
+{
+    <section class="hop hop-2-vien">
+        <section class="tieu-de">
+            Đăng bài viết
+        </section>
+        @Html.Partial("~/Views/BaiVietBaiTap/_Form.cshtml", null, new ViewDataDictionary() 
+        { 
+            { "MaKhoaHoc", ViewData["MaKhoaHoc"] } 
+        })
+    </section>   
+}
 
 <section class="hop">
     <section class="tieu-de">
@@ -16,7 +29,7 @@
         {
             foreach (var baiViet in Model)
             {
-                @Html.Partial("~/Views/BaiVietDienDan/_Item.cshtml", baiViet);
+                @Html.Partial("~/Views/BaiVietDienDan/_Item.cshtml", baiViet, ViewData)
             }  
         } 
     </ul>
