--- a/LCTMoodle/Views/HoiDap/_Item_TraLoi.cshtml
+++ b/LCTMoodle/Views/HoiDap/_Item_TraLoi.cshtml
@@ -1,43 +1,19 @@
 ﻿@model DTOLayer.TraLoiDTO
            
-<!-- region item Trả lời -->
-
-<!--
-<article class="tra-loi">
-    <div class="chi-tiet">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-    </div>
-    <div class="thong-tin">
-        <div class="diem">
-            <i class="pe-7s-angle-up"></i>
-            <span class="diem-so">5</span>
-            <i class="pe-7s-angle-down"></i>
-        </div>
-        <div class="tac-gia">
-            <div class="thoi-gian">trả lời lúc <span>24/5/2015</span></div>
-            <div class="nguoi-dang">bởi <a href="#">NMC</a></div>
-        </div>
-    </div>
-</article>
--->
+<!-- region muc Trả lời -->
 
 @if (Model != null)
 {
-    <article class="hop hop-1-vien">
+    <li class="hop hop-1-vien" data-doi-tuong="muc_tra_loi" data-ma="@Model.ma">
         <section class="noi-dung tra-loi">
-            <article class="item-hoi-dap binh-thuong">
+            <article class="muc-hoi-dap binh-thuong">
                 <section class="khung-chuc-nang-lct">
                     <ul data-doi-tuong="traloi-@Model.ma">
                         <li>
-                            <a data-chuc-nang="sua-bai-viet">Sửa bài viết</a>
+                            <a data-chuc-nang="sua-tra-loi">Sửa trả lời</a>
                         </li>
                         <li>
-                            <a data-chuc-nang="xoa-bai-viet">Xóa bài viết</a>
+                            <a data-chuc-nang="xoa-tra-loi">Xóa trả lời</a>
                         </li>
                     </ul>
                     <button data-chuc-nang="tat-mo" data-mo-doi-tuong="traloi-@Model.ma">
@@ -65,7 +41,7 @@
                 </section>
             </article>
         </section>
-    </article>
+    </li>
 }
 
 <!-- endregion Trả lời -->
