--- a/LCTMoodle/Plugin/ckeditor/contents.css
+++ b/LCTMoodle/Plugin/ckeditor/contents.css
@@ -1,39 +1,12 @@
-﻿/*
+/*
 Copyright (c) 2003-2015, CKSource - Frederico Knabben. All rights reserved.
 For licensing, see LICENSE.md or http://ckeditor.com/license
 */
 
-/*#region General (Giống Khung.css) */
-
-* {
-    margin: 0;
-    padding: 0;
-}
-
-li {
-    display: block;
-}
-
-body {
-    background-color: #f5f5f5;
-}
-
-a {
-    color: #000;
-    text-decoration: none;
-}
-
-    a:hover {
-        text-decoration: underline;
-    }
-
-/*#endregion */
-
 body
 {
 	/* Font */
-	font-family: sans-serif, Arial, Verdana, "Trebuchet MS";
-	font-size: 12px;
+    font: normal 13px 'Segoe ui';
 
 	/* Text color */
 	color: #333;
@@ -42,7 +15,6 @@ body
 	background-color: #fff;
 
 	margin: 20px;
-    position: relative;
 }
 
 html:after {
@@ -72,24 +44,28 @@ html.loi:after {
 	line-height: 1.6;
 }
 
-.cke_editable * {
-    margin: .4em 0;
-}
-
 blockquote
 {
 	font-style: italic;
 	font-family: Georgia, Times, "Times New Roman", serif;
-	border: 0 solid #ddd;
-    padding: 2px 8px 2px 20px;
-	border-left-width: 3px;
+	padding: 2px 0;
+	border-style: solid;
+	border-color: #ccc;
+	border-width: 0;
+}
+
+.cke_contents_ltr blockquote
+{
+	padding-left: 20px;
+	padding-right: 8px;
+	border-left-width: 5px;
 }
 
 .cke_contents_rtl blockquote
 {
-    padding: 0 8px 0 20px;
-	border-left-width: 0;
-	border-right-width: 3px;
+	padding-left: 8px;
+	padding-right: 20px;
+	border-right-width: 5px;
 }
 
 a
@@ -97,25 +73,26 @@ a
 	color: #0782C1;
 }
 
-ol,ul
+ol,ul,dl
 {
 	/* IE7: reset rtl list margin. (#7334) */
 	*margin-right: 0px;
 	/* preserved spaces for list items with text direction other than the list. (#6249,#8049)*/
-	padding-left: 40px;
+	padding: 0 40px;
 }
 
 ol {
-    list-style: decimal;
+    list-style-type: decimal;
 }
 
 ul {
-    list-style: circle;
+    list-style-type: disc;
 }
 
 h1,h2,h3,h4,h5,h6
 {
 	font-weight: normal;
+	line-height: 1.2;
 }
 
 hr
