--- a/LCTMoodle/Views/BaiVietBaiGiang/_Item.cshtml
+++ b/LCTMoodle/Views/BaiVietBaiGiang/_Item.cshtml
@@ -19,7 +19,7 @@
             </section>
         }
     </section>
-    <section class="khung-chuc-nang-lct">
+    <section class="khung-chuc-nang-lct" style="top: 10px; right: 10px;">
         <ul data-doi-tuong="cnbg-@Model.ma">
             <li>
                 <a data-chuc-nang="sua-bai-viet">Sửa bài viết</a>
