--- a/LCTMoodle/Content/styles/LCT/Khung.css
+++ b/LCTMoodle/Content/styles/LCT/Khung.css
@@ -4,8 +4,8 @@
     margin: 0;
     padding: 0;
 }
-li {
-    display: block;
+ul {
+    list-style: none;
 }
 body {
     background-color: #f5f5f5;
@@ -18,7 +18,7 @@ a {
     color: #333;
     text-decoration: none;  
 }
-a:hover {
+a[href]:hover {
     text-decoration: underline;
 }
 .tat {
@@ -163,48 +163,22 @@ body:not(.tai) > .bieu-tuong-tai {
 
 /*#region Nội dung CKEDITOR */
 
-.noi-dung-ckeditor {
-    font-size: 13px;
-    line-height: 1.6;
-    margin: .4em 0;
-}
-
-.noi-dung-ckeditor * {
-    margin: .4em 0;
-}
-
-.noi-dung-ckeditor blockquote {
-	font-style: italic;
-	font-family: Georgia, Times, "Times New Roman", serif;
-	border: 0 solid #ddd;
-    padding: 2px 8px 2px 20px;
-	border-left-width: 3px;
-}
-
-.noi-dung-ckeditor .cke_contents_rtl blockquote {
-    padding: 0 8px 0 20px;
-	border-left-width: 0;
-	border-right-width: 3px;
-}
-
-.noi-dung-ckeditor a {
-	color: #0782C1;
-}
-
 .noi-dung-ckeditor ol,
-.noi-dung-ckeditor ul {
+.noi-dung-ckeditor ul,
+.noi-dung-ckeditor dl
+{
 	/* IE7: reset rtl list margin. (#7334) */
 	*margin-right: 0px;
 	/* preserved spaces for list items with text direction other than the list. (#6249,#8049)*/
-	padding-left: 40px;
+	padding: 0 40px;
 }
 
 .noi-dung-ckeditor ol {
-    list-style: decimal;
+    list-style-type: decimal;
 }
 
 .noi-dung-ckeditor ul {
-    list-style: circle;
+    list-style-type: disc;
 }
 
 .noi-dung-ckeditor h1,
@@ -212,35 +186,36 @@ body:not(.tai) > .bieu-tuong-tai {
 .noi-dung-ckeditor h3,
 .noi-dung-ckeditor h4,
 .noi-dung-ckeditor h5,
-.noi-dung-ckeditor h6 {
+.noi-dung-ckeditor h6
+{
 	font-weight: normal;
-    margin: .5em 0;
+	line-height: 1.2;
 }
 
-.noi-dung-ckeditor p {
-    margin: .5em 0;
-}
-
-.noi-dung-ckeditor hr {
+.noi-dung-ckeditor hr
+{
 	border: 0px;
 	border-top: 1px solid #ccc;
 }
 
-.noi-dung-ckeditor img.right {
+.noi-dung-ckeditor img.right
+{
 	border: 1px solid #ccc;
 	float: right;
 	margin-left: 15px;
 	padding: 5px;
 }
 
-.noi-dung-ckeditor img.left {
+.noi-dung-ckeditor img.left
+{
 	border: 1px solid #ccc;
 	float: left;
 	margin-right: 15px;
 	padding: 5px;
 }
 
-.noi-dung-ckeditor pre {
+.noi-dung-ckeditor pre
+{
 	white-space: pre-wrap; /* CSS 2.1 */
 	word-wrap: break-word; /* IE7 */
 	-moz-tab-size: 4;
@@ -249,15 +224,18 @@ body:not(.tai) > .bieu-tuong-tai {
 	tab-size: 4;
 }
 
-.noi-dung-ckeditor .marker {
+.noi-dung-ckeditor .marker
+{
 	background-color: Yellow;
 }
 
-.noi-dung-ckeditor span[lang] {
+.noi-dung-ckeditor span[lang]
+{
 	font-style: italic;
 }
 
-.noi-dung-ckeditor figure {
+.noi-dung-ckeditor figure
+{
 	text-align: center;
 	border: solid 1px #ccc;
 	border-radius: 2px;
@@ -267,7 +245,8 @@ body:not(.tai) > .bieu-tuong-tai {
 	display: inline-block;
 }
 
-.noi-dung-ckeditor figure > figcaption {
+.noi-dung-ckeditor figure > figcaption
+{
 	text-align: center;
 	display: block; /* For IE8 */
 }
