--- a/LCTMoodle/Views/BaiVietDienDan/_Form.cshtml
+++ b/LCTMoodle/Views/BaiVietDienDan/_Form.cshtml
@@ -21,7 +21,7 @@
             <li data-an>
                 <section class="noi-dung">
                     <section class="input">
-                        <textarea data-validate="bat-buoc" name="NoiDung" data-input-type="editor" placeholder="Nội dung" data-mac-dinh="@(Model != null ? Html.Raw(Model.noiDung) : null)"></textarea>
+                        <textarea data-validate="bat-buoc" name="NoiDung" data-input-type="editor" placeholder="Nội dung" data-mac-dinh="@(Model != null ? Model.noiDung : null)"></textarea>
                     </section>
                 </section>
             </li>
