Gom code cui bap

--- a/LCTMoodle/Views/HoiDap/TaoCauHoi.cshtml
+++ b/LCTMoodle/Views/HoiDap/TaoCauHoi.cshtml
@@ -11,17 +11,16 @@
 }
 
 @section Styles {
-    
 }
 
 @section Scripts {
-    <script type="text/javascript" src="/TaoCauHoi.js/HoiDap"></script>
+    <script src="/TaoCauHoi.js/HoiDap/"></script>
 }
 
 <article class="hop hop-2-vien" >
     <section class="tieu-de">Thêm câu hỏi</section>
     <section class="noi-dung">
-        <form class="lct-form" id="tao_cau_hoi_form" action="/HoiDap/XuLyThemCauHoi" method="POST">
+        <form class="lct-form" id="them_cau_hoi" action="/HoiDap/XuLyThemCauHoi" method="POST">
             <article>
                 <ul>
                     <li>
