--- a/LCTMoodle/Content/styles/HoiDap/XemCauHoi.css
+++ b/LCTMoodle/Content/styles/HoiDap/XemCauHoi.css
@@ -97,9 +97,35 @@
 
 /*#region Trả lời */
 
-.tra-loi {
-    border-color: #e5e5e5 !important;
-}
+    /*#region Danh sách trả lời*/
+
+    .danh-sach-tra-loi {
+
+    }
+        .danh-sach-tra-loi + * {
+            display: none;
+            text-align:center;
+            border: 1px solid #ddd;
+            background-color: #fff;
+            color: #555;
+            padding: 10px;
+        }
+        .danh-sach-tra-loi:empty + * {
+            display: block;
+        }
+
+    /*#endregion*/
+
+    /*#region Item Trả Lời*/
+
+    .tra-loi {
+        border-color: #e5e5e5 !important;
+    }
+
+    /*#endregion*/
+
+    /*#region Trạng thái*/
+
     .binh-thuong {
         border-left: 3px solid #ccc;
     }
@@ -107,11 +133,13 @@
         border-left: 3px solid #08c;
     }
 
+    /*#endregion*/
+
 /*#endregion */
 
 /*#region Form trả lời */
 
-.form-tra-loi .noi-dung {
+.lct-form .noi-dung {
     width: 100%;
 }
 
