--- a/LCTMoodle/Views/HoiDap/TaoCauHoi.cshtml
+++ b/LCTMoodle/Views/HoiDap/TaoCauHoi.cshtml
@@ -20,34 +20,6 @@
 <article class="hop hop-2-vien" >
     <section class="tieu-de">Thêm câu hỏi</section>
     <section class="noi-dung">
-        <form class="lct-form" id="them_cau_hoi" action="/HoiDap/XuLyThemCauHoi" method="POST">
-            <article>
-                <ul>
-                    <li>
-                        <section class="tieu-de">
-                            <label>Tiêu đề</label>
-                        </section>
-                        <section class="noi-dung">
-                            <section class="input">
-                                <input type="text" name="TieuDe" data-validate="bat-buoc" />
-                            </section>
-                        </section>
-                    </li>
-                    <li>
-                        <section class="tieu-de">
-                            <label>Nội dung câu hỏi</label>
-                        </section>
-                        <section class="noi-dung">
-                            <section class="input">
-                                <textarea name="NoiDung" data-input-type="editor" data-validate="bat-buoc"></textarea>
-                            </section>
-                        </section>
-                    </li>
-                </ul>
-                <section class="khung-button">
-                    <button type="submit" class="chap-nhan">Tạo câu hỏi</button>
-                </section>
-            </article>
-        </form>
+        @Html.Partial("~/Views/HoiDap/_Form_CauHoi.cshtml", null)
     </section>
 </article>
