--- a/LCTMoodle/Views/HoiDap/_Form_CauHoi.cshtml
+++ b/LCTMoodle/Views/HoiDap/_Form_CauHoi.cshtml
@@ -26,7 +26,7 @@
             @if (Model != null)
             {
                 <button type="submit" class="chap-nhan">Cập nhật</button>
-                <button class="canh-bao">Hủy</button>
+                <button type="button" data-chuc-nang="huy" class="canh-bao">Hủy</button>
             }
             else
             {
