--- a/LCTMoodle/Views/HoiDap/_Form_TraLoi.cshtml
+++ b/LCTMoodle/Views/HoiDap/_Form_TraLoi.cshtml
@@ -1,6 +1,6 @@
 ﻿@model DTOLayer.TraLoiDTO
 
-<form class="lct-form" action="/HoiDap/XuLyThemTraLoi" method="post" id="tra_loi_cau_hoi">
+<form class="lct-form" id="form_tra_loi" data-doi-tuong="form-tra-loi">
     
     @if(Model == null)
     {
