--- a/LCTMoodle/Content/styles/LCT/Khung.css
+++ b/LCTMoodle/Content/styles/LCT/Khung.css
@@ -66,6 +66,7 @@ body:not(.tai) > .bieu-tuong-tai {
     position: absolute;
     top: 1px;
     right: 1px;
+    z-index: 10;
 }
 
     .khung-chuc-nang-lct button {
