--- a/LCTMoodle/Views/KhoaHoc/Xem.cshtml
+++ b/LCTMoodle/Views/KhoaHoc/Xem.cshtml
@@ -1,7 +1,10 @@
 ﻿@model DTOLayer.KhoaHocDTO
 @{
-    ViewData["TieuDe"] = Model.ten;
     Layout = "~/Views/LCT/Khung.cshtml";
+
+    var thanhVien = ViewData["ThanhVien"] as DTOLayer.KhoaHoc_NguoiDungDTO;
+        
+    ViewData["TieuDe"] = Model.ten;
 
     ViewData["DieuHuong"] = new List<string>()
     {
@@ -13,7 +16,7 @@
     ViewData["ChucNang"] = new List<string>()
     {
         "Quản lý quyền", "href=\"/QuanlyQuyen/KH/" + Model.ma + "\""
-    };
+    };    
 }
 
 @section Styles {
